--- a/product-catalog/builder/serverless.yml
+++ b/product-catalog/builder/serverless.yml
@@ -227,7 +227,7 @@ resources:
       Value:
         Ref: ProductCategory
       Export:
-        Name: ${self:custom.exportProductCategoryTableName}
+        Name: ${self:custom.productCatalogBuilder.custom.exportProductCategoryTableName}
     ProductCategoryTableArn:
       Description: The ARN for the Product Category Table
       Value:
@@ -236,13 +236,13 @@ resources:
           - - 'arn:aws:dynamodb:${self:provider.region}:${self:custom.private.accountId}:table'
             - Ref: ProductCategory
       Export:
-        Name: ${self:custom.exportProductCategoryTableArn}
+        Name: ${self:custom.productCatalogBuilder.custom.exportProductCategoryTableArn}
     ProductCatalogTableName:
       Description: The Name of the Product Catalog Table
       Value:
         Ref: ProductCatalog
       Export:
-        Name: ${self:custom.exportProductCatalogTableName}
+        Name: ${self:custom.productCatalogBuilder.custom.exportProductCatalogTableName}
     ProductCatalogTableArn:
       Description: The ARN for the Product Catalog Table
       Value:
@@ -251,7 +251,7 @@ resources:
           - - 'arn:aws:dynamodb:${self:provider.region}:${self:custom.private.accountId}:table'
             - Ref: ProductCatalog
       Export:
-        Name: ${self:custom.exportProductCatalogTableArn}
+        Name: ${self:custom.productCatalogBuilder.custom.exportProductCatalogTableArn}
     ProductCatalogTableCategoryIndexArn:
       Description: The ARN for the Product Catalog Table's Category Index
       Value:
@@ -262,7 +262,7 @@ resources:
             - index
             - Category
       Export:
-        Name: ${self:custom.exportProductCatalogTableCategoryIndexArn}
+        Name: ${self:custom.productCatalogBuilder.custom.exportProductCatalogTableCategoryIndexArn}
     ProductCatalogReaderArn:
       Description: The Role ARN for a Product Catalog Reader
       Value:
