--- a/product-photos/productPhotos.yml
+++ b/product-photos/productPhotos.yml
@@ -1,14 +1,56 @@
-name: product-photos
-photoAssignmentsVersion: 1
+#TODO REMOVE AND REPLACE
+bucket: ${self:custom.stage}.hello-retail.biz
+bucketArn: arn:aws:s3:::{self:custom.productPhotos.bucket}
+
+# Project
+name: ${self:custom.helloRetail.name}-product-photos
+productPhotosVersion: 1
+
+# Data
 dataName: ${self:custom.productPhotos.name}-data
-dispatchName: ${self:custom.productPhotos.name}-dispatch
+exportPhotoAssignmentsTableName: ${self:custom.productPhotos.dataName}:${self:custom.stage}:PhotoAssignmentsTableName:${self:custom.productPhotos.productPhotosVersion}
+exportPhotoAssignmentsTableArn: ${self:custom.productPhotos.dataName}:${self:custom.stage}:PhotoAssignmentsTableArn:${self:custom.productPhotos.productPhotosVersion}
+
+# Lambdas
+executeName: ${self:custom.productPhotos.name}-execute
+
 assignName: ${self:custom.productPhotos.name}-assign
-imageName: ${self:custom.productPhotos.name}-image
-# Exports
-exportPhotoAssignmentsTableName: ${self:custom.productPhotos.dataName}:${self:custom.stage}:PhotoAssignmentsTableName:${self:custom.productPhotos.photoAssignmentsVersion}
-exportPhotoAssignmentsTableArn: ${self:custom.productPhotos.dataName}:${self:custom.stage}:PhotoAssignmentsTableArn:${self:custom.productPhotos.photoAssignmentsVersion}
-exportPhotoAssignmentsStepFunctionName: ${self:custom.productPhotos.assignName}:${self:custom.stage}:PhotoAssignmentsStepFunctionName:${self:custom.productPhotos.photoAssignmentsVersion}
-exportPhotoAssignmentsStepFunctionArn: ${self:custom.productPhotos.assignName}:${self:custom.stage}:PhotoAssignmentsStepFunctionArn:${self:custom.productPhotos.photoAssignmentsVersion}
+exportPhotoAssignmentsAssignLambdaName: ${self:custom.productPhotos.assignName}:${self:custom.stage}:PhotoAssignmentsAssignLambdaName:${self:custom.productPhotos.productPhotosVersion}
+exportPhotoAssignmentsAssignLambdaArn: ${self:custom.productPhotos.assignName}:${self:custom.stage}:PhotoAssignmentsAssignLambdaArn:${self:custom.productPhotos.productPhotosVersion}
+
+messageName: ${self:custom.productPhotos.name}-message
+exportPhotoAssignmentsMessageLambdaName: ${self:custom.productPhotos.messageName}:${self:custom.stage}:PhotoAssignmentsMessageLambdaName:${self:custom.productPhotos.productPhotosVersion}
+exportPhotoAssignmentsMessageLambdaArn: ${self:custom.productPhotos.messageName}:${self:custom.stage}:PhotoAssignmentsMessageLambdaArn:${self:custom.productPhotos.productPhotosVersion}
+
+recordName: ${self:custom.productPhotos.name}-record
+exportPhotoAssignmentsRecordLambdaName: ${self:custom.productPhotos.recordName}:${self:custom.stage}:PhotoAssignmentsRecordLambdaName:${self:custom.productPhotos.productPhotosVersion}
+exportPhotoAssignmentsRecordLambdaArn: ${self:custom.productPhotos.recordName}:${self:custom.stage}:PhotoAssignmentsRecordLambdaArn:${self:custom.productPhotos.productPhotosVersion}
+
+receiveName: ${self:custom.productPhotos.name}-receive
+exportPhotoAssignmentsReceiveLambdaName: ${self:custom.productPhotos.receiveName}:${self:custom.stage}:PhotoAssignmentsReceiveLambdaName:${self:custom.productPhotos.productPhotosVersion}
+exportPhotoAssignmentsReceiveLambdaArn: ${self:custom.productPhotos.receiveName}:${self:custom.stage}:PhotoAssignmentsReceiveLambdaArn:${self:custom.productPhotos.productPhotosVersion}
+
+failName: ${self:custom.productPhotos.name}-fail
+exportPhotoAssignmentsFailLambdaName: ${self:custom.productPhotos.failName}:${self:custom.stage}:PhotoAssignmentsFailLambdaName:${self:custom.productPhotos.productPhotosVersion}
+exportPhotoAssignmentsFailLambdaArn: ${self:custom.productPhotos.failName}:${self:custom.stage}:PhotoAssignmentsFailLambdaArn:${self:custom.productPhotos.productPhotosVersion}
+
+unmessageName: ${self:custom.productPhotos.name}-unmessage
+exportPhotoAssignmentsUnmessageLambdaName: ${self:custom.productPhotos.unmessageName}:${self:custom.stage}:PhotoAssignmentsUnmessageLambdaName:${self:custom.productPhotos.productPhotosVersion}
+exportPhotoAssignmentsUnmessageLambdaArn: ${self:custom.productPhotos.unmessageName}:${self:custom.stage}:PhotoAssignmentsUnmessageLambdaArn:${self:custom.productPhotos.productPhotosVersion}
+
+reportName: ${self:custom.productPhotos.name}-report
+exportPhotoAssignmentsReportLambdaName: ${self:custom.productPhotos.reportName}:${self:custom.stage}:PhotoAssignmentsReportLambdaName:${self:custom.productPhotos.productPhotosVersion}
+exportPhotoAssignmentsReportLambdaArn: ${self:custom.productPhotos.reportName}:${self:custom.stage}:PhotoAssignmentsReportLambdaArn:${self:custom.productPhotos.productPhotosVersion}
+
+# Activities
+receiveActivityName: ${self:custom.productPhotos.name}-receive
+receiveActivityArn: arn:aws:states:${self:custom.private.region}:${self:custom.private.accountId}:activity:${self:custom.stage}-${self:custom.productPhotos.receiveActivityName}
+
+# Step Function
+processName: ${self:custom.productPhotos.name}-process
+exportPhotoAssignmentsStepFunctionName: ${self:custom.productPhotos.processName}:${self:custom.stage}:PhotoAssignmentsStepFunctionName:${self:custom.productPhotos.productPhotosVersion}
+exportPhotoAssignmentsStepFunctionArn: ${self:custom.productPhotos.processName}:${self:custom.stage}:PhotoAssignmentsStepFunctionArn:${self:custom.productPhotos.productPhotosVersion}
+
 # Policies
 getPhotoAssignment:
   PolicyName: GetPhotoAssignment
