--- a/product-photos/2.message/package.json
+++ b/product-photos/2.message/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hello-retail-product-photos-dispatch",
+  "name": "send-assignment",
   "version": "0.0.1",
-  "description": "A stream processor that watches for new products and aquires a photo for each one",
-  "main": "index.js",
+  "description": "A Lambda function for sending a text to a photographer requesting a product image.",
+  "main": "message.js",
   "scripts": {
     "test": "echo \"Error: tests executed by root hello-retail package.json\" && exit 1"
   },
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/Nordstrom/hello-retail/product-photos#readme",
   "dependencies": {
-    "ajv": "^4.10.4"
+    "bluebird": "^3.4.7",
+    "twilio": "^2.11.1"
   }
 }
