--- a/retail-stream/serverless.yml
+++ b/retail-stream/serverless.yml
@@ -46,6 +46,7 @@ resources:
                 AWS: # role ARNs that are allowed to write to the Retail stream
                   - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.private.teamRole}'
                   - '${self:custom.private.productProvider}'
+                  - '${self:custom.private.productImageProvider}'
               Action: sts:AssumeRole
         ManagedPolicyArns:
           - ${self:custom.private.teamPolicy}
@@ -95,22 +96,22 @@ resources:
       Value:
         Ref: RetailStream
       Export:
-        Name: ${self:custom.exportRetailStreamName}
+        Name: ${self:custom.retailStream.custom.exportRetailStreamName}
     RetailStreamArn:
       Description: The ARN for the Retail Stream
       Value:
         Fn::GetAtt: [ RetailStream, Arn ]
       Export:
-        Name: ${self:custom.exportRetailStreamArn}
+        Name: ${self:custom.retailStream.custom.exportRetailStreamArn}
     RetailStreamWriterArn:
       Description: The ARN for the defined Role that can write events to the RetailStream
       Value:
         Fn::GetAtt: [ RetailStreamWriter, Arn ]
       Export:
-        Name: ${self:custom.exportRetailStreamWriterArn}
+        Name: ${self:custom.retailStream.custom.exportRetailStreamWriterArn}
     RetailStreamReaderArn:
       Description: The ARN for the defined Role that can read events from the RetailStream
       Value:
         Fn::GetAtt: [ RetailStreamReader, Arn ]
       Export:
-        Name: ${self:custom.exportRetailStreamReaderArn}
+        Name: ${self:custom.retailStream.custom.exportRetailStreamReaderArn}
