Initial Acquire Image Success, with Manual Record Execution
Checking this in since it works (except for the unacceptable manual intervention requirement)
2.record
  Increase timeout on record method, given that the getActivityTask call can take up to a minute
3.receive
  package.json
    Replace `follow-redirects` with `got` which also follows redirects but provides a buffer of the response body, adjust to use
  receive.js
    Clean up receive.js console.log'ing and user message validation
    Adjust code to replace `follow-redirects` with `got` which also follows redirects but provides a buffer of the response body
    Parse the assignment's task event back into an object (DynamoDb.DocumentClient serialized it into a string)
    Add content type and metadata to S3 image
    Resolve success reporting with task's event
  serverless.yml
    be more specific with bucket rights
4.success
  add new lambda to mark success of activity.  transferring image from Twilio to S3 and other mechanical responses to user submission will be moved here later
6.report
  report.js
    use new origin definition/format for declaring the user that took and submitted the image
    correct bugs
    use stack in error reporting
  serverless.yml
    use delete rather than update permissions on photo assignments table
process
  acquirePhoto
    fix file name
    hack up acquirePhoto to remove parallel path in troubleshooting attempt
  serverless.yml
    add permissions for using new lambda to step function role
productPhotos.yml
  fix variable reference
  add new "success" lambda naming variables
  fix activity name/arn consistency failure
  add delete rights declaration to get/update for assignments table

--- a/product-photos/3.receive/serverless.yml
+++ b/product-photos/3.receive/serverless.yml
@@ -22,7 +22,7 @@ functions:
     handler: receive.handler
     environment:
       STAGE: ${self:custom.stage}
-      BUCKET: ${self:custom.productPhotos.bucket}
+      IMAGE_BUCKET: ${self:custom.productPhotos.bucket}
       ENDPOINT:
         Fn::Join:
           - ''
@@ -92,7 +92,7 @@ resources:
                 - Effect: 'Allow'
                   Action:
                     - 's3:putObject'
-                  Resource: ${self:custom.productPhotos.bucketArn}
+                  Resource: ${self:custom.productPhotos.bucketArn}/i/p/*
           - PolicyName: SucceedActivityTask
             PolicyDocument:
               Version: '2012-10-17'
