Working Fully-Parallel, Fully-Auto Acquire Photo
Fix file names /sigh (except acquirePhoto.yml, so that diff is clear.  do that separately)
Improve indents on Catch/ErrorEquals attributes
Add Pass stage to extract Parrallel state results

--- a/product-photos/process/serverless.yml
+++ b/product-photos/process/serverless.yml
@@ -60,7 +60,7 @@ resources:
     StepFunction:
       Type: 'AWS::StepFunctions::StateMachine'
       Properties:
-        DefinitionString: '${file(aquirePhoto.js):shim}'
+        DefinitionString: '${file(acquirePhoto.js):shim}'
         RoleArn:
           'Fn::GetAtt': [ StepFunctionRole, Arn ]
   Outputs:
