--- a/product-photos/process/aquirePhoto.yml
+++ b/product-photos/process/aquirePhoto.yml
@@ -1,4 +1,4 @@
-# State Machine (AWS StepFunction for Aquiring an Image from a registered Photographer)
+# State Machine (AWS StepFunction for Acquiring an Image from a registered Photographer)
 Comment: Aquire a photograph of the given product from one of the registered photographers
 StartAt: AssignPhotographer
 States:
@@ -6,15 +6,15 @@ States:
     Type: Task
     Resource: arn:aws:lambda:${self:custom.private.region}:${self:custom.private.accountId}:function:${self:custom.productPhotos.assignName}-${self:custom.stage}-assign
     Retry:
-    - ErrorEquals:
-      - States.ALL
-      IntervalSeconds: 1
-      MaxAttempts: 2
-      BackoffRate: 2
+      - ErrorEquals:
+          - States.ALL
+        IntervalSeconds: 1
+        MaxAttempts: 2
+        BackoffRate: 2
     Catch:
-    - ErrorEquals:
-      - States.ALL
-      Next: AssignPhotographerError
+      - ErrorEquals:
+          - States.ALL
+        Next: AssignPhotographerError
     Next: SendAssignmentNotice
   AssignPhotographerError:
     Type: Fail
@@ -24,95 +24,99 @@ States:
     Type: Task
     Resource: arn:aws:lambda:${self:custom.private.region}:${self:custom.private.accountId}:function:${self:custom.productPhotos.messageName}-${self:custom.stage}-message
     Retry:
-    - ErrorEquals:
-      - States.ALL
-      IntervalSeconds: 1
-      MaxAttempts: 2
-      BackoffRate: 2
+      - ErrorEquals:
+          - States.ALL
+        IntervalSeconds: 1
+        MaxAttempts: 2
+        BackoffRate: 2
     Catch:
-    - ErrorEquals:
-      - States.ALL
-      Next: SendAssignmentNoticeError
-    Next: AwaitPhoto
+      - ErrorEquals:
+          - States.ALL
+        Next: SendAssignmentNoticeError
+    Next: WaitForPhoto
   SendAssignmentNoticeError:
     Type: Fail
     Cause: Repeated Failure Sending Assignment Notice to Photographer
     Error: RepeatedFailure
-#  WaitForPhoto:
-#    Type: Parallel
-#    Branches:
-#    - StartAt: AwaitPhoto
-#      States:
-  AwaitPhoto:
-    Type: Task
-    Resource: ${self:custom.productPhotos.receiveActivityArn}
-    TimeoutSeconds: 600
-    Catch:
-      - ErrorEquals:
-          - States.Timeout
-        Next: AwaitPhotoFail
-    Next: AwaitPhotoSuccess
-  AwaitPhotoFail:
-    Type: Task
-    Resource: arn:aws:lambda:${self:custom.private.region}:${self:custom.private.accountId}:function:${self:custom.productPhotos.failName}-${self:custom.stage}-fail
-    Retry:
-    - ErrorEquals:
-      - States.ALL
-      IntervalSeconds: 1
-      MaxAttempts: 2
-      BackoffRate: 2
-    Catch:
-    - ErrorEquals:
-      - States.ALL
-      Next: AwaitPhotoFailError
-    End: true
-  AwaitPhotoFailError:
-    Type: Fail
-    Cause: Repeated Failure Failing Photographer Assignment
-    Error: RepeatedFailure
-  AwaitPhotoSuccess:
-    Type: Task
-    Resource: arn:aws:lambda:${self:custom.private.region}:${self:custom.private.accountId}:function:${self:custom.productPhotos.successName}-${self:custom.stage}-success
-    Retry:
-    - ErrorEquals:
-      - States.ALL
-      IntervalSeconds: 1
-      MaxAttempts: 2
-      BackoffRate: 2
-    Catch:
-    - ErrorEquals:
-      - States.ALL
-      Next: AwaitPhotoSuccessError
+  WaitForPhoto:
+    Type: Parallel
+    Branches:
+      - StartAt: AwaitPhoto
+        States:
+          AwaitPhoto:
+            Type: Task
+            Resource: ${self:custom.productPhotos.receiveActivityArn}
+            TimeoutSeconds: 600
+            Catch:
+              - ErrorEquals:
+                  - States.Timeout
+                Next: AwaitPhotoFail
+            Next: AwaitPhotoSucceed
+          AwaitPhotoFail:
+            Type: Task
+            Resource: arn:aws:lambda:${self:custom.private.region}:${self:custom.private.accountId}:function:${self:custom.productPhotos.failName}-${self:custom.stage}-fail
+            Retry:
+              - ErrorEquals:
+                  - States.ALL
+                IntervalSeconds: 1
+                MaxAttempts: 2
+                BackoffRate: 2
+            Catch:
+              - ErrorEquals:
+                  - States.ALL
+                Next: AwaitPhotoFailError
+            End: true
+          AwaitPhotoFailError:
+            Type: Fail
+            Cause: Repeated Failure Failing Photographer Assignment
+            Error: RepeatedFailure
+          AwaitPhotoSucceed:
+            Type: Task
+            Resource: arn:aws:lambda:${self:custom.private.region}:${self:custom.private.accountId}:function:${self:custom.productPhotos.successName}-${self:custom.stage}-success
+            Retry:
+              - ErrorEquals:
+                  - States.ALL
+                IntervalSeconds: 1
+                MaxAttempts: 2
+                BackoffRate: 2
+            Catch:
+              - ErrorEquals:
+                  - States.ALL
+                Next: AwaitPhotoSucceedError
+            Next: AwaitPhotoSuccess
+          AwaitPhotoSucceedError:
+            Type: Fail
+            Cause: Repeated Failure Failing Photographer Assignment
+            Error: RepeatedFailure
+          AwaitPhotoSuccess:
+            Type: Succeed
+      - StartAt: RecordAssignment
+        States:
+          RecordAssignment:
+            Type: Task
+            Resource: arn:aws:lambda:${self:custom.private.region}:${self:custom.private.accountId}:function:${self:custom.productPhotos.recordName}-${self:custom.stage}-record
+            Retry:
+              - ErrorEquals:
+                  - States.ALL
+                IntervalSeconds: 1
+                MaxAttempts: 2
+                BackoffRate: 2
+            Catch:
+              - ErrorEquals:
+                  - States.ALL
+                Next: RecordAssignmentError
+            Next: RecordAssignmentSuccess
+          RecordAssignmentError:
+            Type: Fail
+            Cause: Repeated Failure Recording Photographer Assignment
+            Error: RepeatedFailure
+          RecordAssignmentSuccess:
+            Type: Succeed
+    Next: ExtractResult
+  ExtractResult:
+    InputPath: '$.[0]'
+    Type: 'Pass'
     Next: RetryOrComplete
-  AwaitPhotoSuccessError:
-    Type: Fail
-    Cause: Repeated Failure Failing Photographer Assignment
-    Error: RepeatedFailure
-#        AwaitPhotoSuccess:
-#          Type: Succeed
-#    - StartAt: RecordAssignment
-#      States:
-#        RecordAssignment:
-#          Type: Task
-#          Resource: arn:aws:lambda:${self:custom.private.region}:${self:custom.private.accountId}:function:${self:custom.productPhotos.recordName}-${self:custom.stage}-record
-#          Retry:
-#          - ErrorEquals:
-#            - States.ALL
-#            IntervalSeconds: 1
-#            MaxAttempts: 2
-#            BackoffRate: 2
-#          Catch:
-#          - ErrorEquals:
-#            - States.ALL
-#            Next: RecordAssignmentError
-#          Next: RecordAssignmentSuccess
-#        RecordAssignmentError:
-#          Type: Fail
-#          Cause: Repeated Failure Recording Photographer Assignment
-#          Error: RepeatedFailure
-#        RecordAssignmentSuccess:
-#          Type: Succeed
-#    Next: RetryOrComplete
   RetryOrComplete:
     Type: Choice
     Choices:
@@ -126,15 +130,15 @@ States:
     Type: Task
     Resource: arn:aws:lambda:${self:custom.private.region}:${self:custom.private.accountId}:function:${self:custom.productPhotos.unmessageName}-${self:custom.stage}-unmessage
     Retry:
-    - ErrorEquals:
-      - States.ALL
-      IntervalSeconds: 1
-      MaxAttempts: 2
-      BackoffRate: 2
+      - ErrorEquals:
+          - States.ALL
+        IntervalSeconds: 1
+        MaxAttempts: 2
+        BackoffRate: 2
     Catch:
-    - ErrorEquals:
-      - States.ALL
-      Next: SendUnassignmentNoticeError
+      - ErrorEquals:
+          - States.ALL
+        Next: SendUnassignmentNoticeError
     Next: AssignPhotographer
   SendUnassignmentNoticeError:
     Type: Fail
@@ -144,15 +148,15 @@ States:
     Type: Task
     Resource: arn:aws:lambda:${self:custom.private.region}:${self:custom.private.accountId}:function:${self:custom.productPhotos.reportName}-${self:custom.stage}-report
     Retry:
-    - ErrorEquals:
-      - States.ALL
-      IntervalSeconds: 1
-      MaxAttempts: 2
-      BackoffRate: 2
+      - ErrorEquals:
+          - States.ALL
+        IntervalSeconds: 1
+        MaxAttempts: 2
+        BackoffRate: 2
     Catch:
-    - ErrorEquals:
-      - States.ALL
-      Next: CompleteAssignmentError
+      - ErrorEquals:
+          - States.ALL
+        Next: CompleteAssignmentError
     Next: Finish
   CompleteAssignmentError:
     Type: Fail
