Fix Unassignment Cycle
Fix expression bug
Don't remove photographer in 4.fail, it's needed in 5.unmessage.  Remove it there.
Declare an output path for the timeout error, so that it doesn't overwrite the original event
Add a count of the number of times an unassignment has occurred.

--- a/product-photos/process/acquirePhoto.yml
+++ b/product-photos/process/acquirePhoto.yml
@@ -50,6 +50,7 @@ States:
             Catch:
               - ErrorEquals:
                   - States.Timeout
+                ResultPath: $.error
                 Next: AwaitPhotoFail
             Next: AwaitPhotoSucceed
           AwaitPhotoFail:
