--- a/buildspec.yml
+++ b/buildspec.yml
@@ -54,5 +54,5 @@ phases:
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - 4.Fail"      $CODEBUILD_SRC_DIR/product-photos/4.fail
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - 5.Unmessage" $CODEBUILD_SRC_DIR/product-photos/5.unmessage
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - 6.Report"    $CODEBUILD_SRC_DIR/product-photos/6.report
-      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - Process"     $CODEBUILD_SRC_DIR/product-photos/process -step # deploy the StepFunction that depends on Lambdas 1-6
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - Process"     $CODEBUILD_SRC_DIR/product-photos/process       # deploy the StepFunction that depends on Lambdas 1-6
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - 0.Execute"   $CODEBUILD_SRC_DIR/product-photos/0.execute     # deploy the Lambda that listens to the stream and executes the StepFunction
